[tool.poetry]
name = "citylearnresourceallocation"
version = "0.1.0"
description = ""
authors = ["Sravan Jayanthi <sjayanthi8@gatech.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sgl-dair = "^0.1.5"
gym = "0.25.1"
matplotlib = "^3.6.3"
pandas = "1.3.5"
pillow = "9.2.0"
simplejson = "3.17.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
